// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSourceWriteHelper pushDefaultImportIfNeeded should add import specifier if named import statement for same module already exists 1`] = `
"import Hoge, { Foo } from \\"./foo\\";
"
`;

exports[`createSourceWriteHelper pushDefaultImportIfNeeded should not add import statement when the same statement exists 1`] = `
"import Hoge from \\"./foo\\";
"
`;

exports[`createSourceWriteHelper pushImportDeclaration should add statement at first when the helpper has no import statement 1`] = `
"import \\"typescript\\";
hoge;
"
`;

exports[`createSourceWriteHelper pushImportDeclaration should add statement at next the last import declaration 1`] = `
"import \\"typescript\\";
import \\"graphql\\";
hoge;
"
`;

exports[`createSourceWriteHelper pushNamedImportIfNeeded should add import specifier if named import statement for same module already exists 1`] = `
"import { Foo, Hoge } from \\"./foo\\";
"
`;

exports[`createSourceWriteHelper pushNamedImportIfNeeded should not add import statement when the same statement exists 1`] = `
"import { Hoge } from \\"./foo\\";
"
`;

exports[`createSourceWriteHelper writeLeadingComment should comment at the top of file 1`] = `
"/* foo */
/* bar */
hoge;
"
`;

exports[`createSourceWriteHelper writeLeadingComment should comment when helper has no statement 1`] = `
"/* foo */
hoge;
"
`;
